// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package privacy.ppn;

option cc_api_version = 2;
option java_outer_classname = "PpnStatusProto";
option java_package = "com.google.android.libraries.privacy.ppn.internal";
option java_api_version = 2;
option java_multiple_files = true;

// Extra optional metadata that can be attached to an absl::Status / PpnStatus.
// Details the error sent by PPN nodes.
message PpnStatusDetails {
  reserved 2;

  enum DetailedErrorCode {
    // Default value, use when no other error known.
    ERROR_CODE_UNKNOWN = 0;
    // Some country associated with the request is not allowed to access PPN.
    DISALLOWED_COUNTRY = 1;
    // Client side use only. Do not use on PPN servers. Never sent from servers.
    LIBRARY_NOT_FOUND = 2;
    // Client side use only. Do not use on PPN servers. Never sent from servers.
    IPC_FAILURE = 3;
    // Indicates that the app no longer has the VPN permission.
    VPN_PERMISSION_REVOKED = 4;
  }

  // An optional error code giving a more specific error condition than the
  // generic error code included on the status. In most cases, this will be
  // UNKNOWN, but can be set to specific values for errors we want to propagate
  // up to the user with a detailed message.
  DetailedErrorCode detailed_error_code = 1;
  // An internal error code from Auth. Do not use to guide any behavior.
  // Please refer to auth error code list to understand what the code means.
  uint64 auth_internal_error_code = 3;
}
